# OpenVolumeMesh

./: .gitlab-ci.yml  0001-Reduced-includes-by-means-of-static-code-analysis.patch  CHANGELOG  CMakeLists.txt  VERSION
CI/: Windows.bat  ci-cppcheck.sh  ci-linux.sh  ci-mac.sh
cmake/: ACGCompiler.cmake
documentation/: Doxyfile  doxy.config.in  mainpage.docu  references.bib
documentation/html/: acg_footer.html  acg_header.html
documentation/subpages/: building_openvolumemesh.docu  concepts.docu  file_format.docu  iterators_and_circulators.docu  property_system.docu
documentation/tutorials/: tutorial_01.docu  tutorial_02.docu  tutorial_03.docu  tutorial_04.docu
examples/simple_mesh/: simple_mesh.cc
license/: LICENSEHEADER
ntop/: CMakeLists.txt
src/: CMakeLists.txt
src/Core/: IteratorsT.cc  OpenVolumeMeshBaseKernel.cc  OpenVolumeMeshBaseKernel.hh  OpenVolumeMeshBaseProperty.hh  OpenVolumeMeshHandle.hh  OpenVolumeMeshProperty.hh  OpenVolumeMeshPropertyContainer.hh  OpenVolumeMeshStatus.hh
src/FileConverter/: MeshGenerator.hpp  ovm_converter.cc
src/FileConverter/Grammars/: Netgen.hpp  Tetmesh.hpp
src/HexahedralMesh/: HexahedralMesh.hh  HexahedralMeshT.cc  OpenHexMesh.hh  OpenHexMeshT.cc
src/HexahedralMesh/Utils/: Iterators.hh  IteratorsT.cc
src/OpenHexMesh/: OpenHexMeshT.cc
src/OpenHexMesh/Utils/: OpenHexMeshIterators.hh  OpenHexMeshIteratorsT.cc
src/OpenVolumeMesh/: OpenVolumeMesh.hh
src/OpenVolumeMesh/Attribs/: ColorAttrib.hh  ColorAttribT.cc  NormalAttrib.hh  NormalAttribT.cc  OpenVolumeMeshStatus.cc  OpenVolumeMeshStatus.hh  StatusAttrib.cc  StatusAttrib.hh  StatusAttribT.cc  TexCoordAttrib.hh  TexCoordAttribT.cc
src/OpenVolumeMesh/Core/: BaseEntities.cc  BaseEntities.hh  BaseProperty.cc  BaseProperty.hh  GeometryKernel.hh  Iterators.cc  Iterators.hh  MemoryInclude.hh  OpenVolumeMeshBaseKernel.cc  OpenVolumeMeshBaseKernel.hh  OpenVolumeMeshBaseProperty.cc  OpenVolumeMeshBaseProperty.hh  OpenVolumeMeshHandle.cc  OpenVolumeMeshHandle.hh  OpenVolumeMeshProperty.hh  OpenVolumeMeshPropertyContainer.hh  OpenVolumeMeshStatus.hh  PropertyDefines.cc  PropertyDefines.hh  PropertyDefinesT.cc  PropertyPtr.hh  PropertyPtrT.cc  ResourceManager.cc  ResourceManager.hh  ResourceManagerT.cc  Serializers.cc  Serializers.hh  SerializersT.cc  TopologyKernel.cc  TopologyKernel.hh
src/OpenVolumeMesh/FileManager/: FileManager.cc  FileManager.hh  FileManagerT.cc
src/OpenVolumeMesh/Geometry/: Vector11T.hh  VectorT.hh  VectorT_inc.hh
src/OpenVolumeMesh/HexahedralMesh/: HexahedralMesh.hh  HexahedralMeshT.cc
src/OpenVolumeMesh/HexahedralMesh/Utils/: Iterators.hh  IteratorsT.cc
src/OpenVolumeMesh/Mesh/: HexahedralMesh.hh  HexahedralMeshIterators.cc  HexahedralMeshIterators.hh  HexahedralMeshIteratorsT.cc  HexahedralMeshTopologyKernel.cc  HexahedralMeshTopologyKernel.hh  HexahedralMeshTopologyKernelT.cc  PolyhedralMesh.hh  TetrahedralMeshIterators.cc  TetrahedralMeshIterators.hh  TetrahedralMeshTopologyKernel.cc  TetrahedralMeshTopologyKernel.hh
src/OpenVolumeMesh/PolyhedralMesh/: PolyhedralMesh.hh  PolyhedralMeshT.cc
src/OpenVolumeMesh/PolyhedralMesh/Utils/: Iterators.hh  IteratorsT.cc
src/OpenVolumeMesh/System/: FunctionalInclude.hh  MemoryInclude.hh
src/OpenVolumeMesh/Utils/: Iterators.hh  IteratorsT.cc  OpenVolumeMeshBaseKernel.hh  OpenVolumeMeshStatus.hh
src/PolyhedralMesh/: OpenVolumeMesh.hh  OpenVolumeMeshT.cc  PolyhedralMesh.hh  PolyhedralMeshT.cc
src/PolyhedralMesh/Utils/: Iterators.hh  IteratorsT.cc
src/Unittests/: CMakeLists.txt  unittests.cc  unittests_basics.cc  unittests_basics.hh  unittests_common.cc  unittests_common.hh  unittests_files.cc  unittests_files.hh  unittests_iterators.cc  unittests_iterators.hh  unittests_properties.cc  unittests_properties.hh  unittests_smartptr.cc
src/Unittests/TestFiles/: Cube_with_props.ovm  Cylinder.ovm
